# sinnemakizeromarking

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_sinnemakizeromarking.py  metadata.json  pyproject.toml  setup.py
cldf/: README.md  cldf-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  language-references.csv  parameters.csv
raw/: README.md
raw/sinnemaki2010/: LICENSE  README.md
raw/sinnemaki2010/bibliography/: references.bib
raw/sinnemaki2010/data/: LingVariables.csv  Register.csv
raw/sinnemaki2010/metadata/: LingVariables.yaml  Register.yaml
