[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cldfbench_sinnemakizeromarking"
dependencies = ["cldfbench[glottolog]", "pyyaml"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest-cldf"]

[project.entry-points."cldfbench.dataset"]
sinnemakizeromarking = "cldfbench_sinnemakizeromarking:Dataset"

[tool.setuptools]
py-modules = ["cldfbench_sinnemakizeromarking"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "--cldf-metadata=cldf/cldf-metadata.json"
